# traffic_analysis

./: .gitignore  CMakeLists.txt  config.cfg  config.yaml  detect.cpp  detect.h
examples/: main_wrapper.cpp
examples/cpp/: debug.cpp  debugCore.cpp  example.cpp  inference.cpp
examples/go/: example.go  example2.go
include/: brand.h  color.h  core.h  detect.h  helmet.h  ocr.h  plate.h  polygon.h  tracker.h  trigger.h  types.h  vehicle.h  yololayer.h
meta/: convert.py  logger.hpp  ocr.pt  plate.pt  types.h  vehicle.pt  version.h  weights.cpp  weights.h  wrapper.h  wrapper.hpp
src/: brand.cpp  color.cpp  core.cpp  detect.cpp  helmet.cpp  logger.hpp  main.cpp  ocr.cpp  plate.cpp  polygon.cpp  tracker.cpp  trigger.cpp  vehicle.cpp  wrapper.cpp  yololayer.cu
